--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,13 @@
+Sublime Jedi v0.13.3
+====================
+
+
+Changes
+-------
+
+* fix function parameters autocompletion in function body. (#265)
+
+
 Sublime Jedi v0.13.2
 ====================
 
