--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,12 @@
+Sublime Jedi v0.13.4
+====================
+
+
+Changes
+-------
+
+* fix duplication in function parameters completion (#267)
+
 Sublime Jedi v0.13.3
 ====================
 
